UNDO now saves reference to the sheet where the action took place.
** Added some automated tests
+ copy_to_undostruct() now keep in added/removed list struct ent_ptr *
  (that knows of sheets), rather than struct ent *.
** Fix not updating graph correctly after yanking cells with references -> Pc -> undo.
   It could also segfault on ocassions as well. Added test5 and test6 for this.

Pending to make v0.8.3 release
-------------------
undo.c: add ent_ptr to added / deleted lists ordered.
ents_that_depends_on_list: change to receive entr_ptr parameter
+ arv should have priority over scimrc.
+ mark should consider sheet. We should have mark A in Sheet 1, and mark B on Sheet 2.. modify tick()
input: block buffer maps digraph
+ ents_that_depends_on_list SHOULD take ent_ptr rather than struct ent * as parameter!
+ rearrange file loading and saving functions
+ Show range detail in inputwin as A0:C3
+ Add GETENT in seval
+ Reeval of @lastrow @lastcol: check cells that uses @lastrow / @lastcol gets updated everytime it change
+ create @counta, and modify @count to not count strings
+ replace locked_cell() with any_locked_cells()


Ideas for v0.8.4
----------------
+ user customizable UI header (bar)
+ yank.c functions should receive yanklist pointer as parameter. this would
allow future use of registers to copy to and paste from.
+ registers for yanking
+use yanklist for added/removed in undo?

--
Thanks to all that helped and created PR.
Thanks to all who support and use this program.

Andrés Martinelli
andmarti1424

***********
v0.8.2

Changes
-------

+ Improved yank and undo alloc'ing. Malloc as much we need from start in a long batch and avoid small mallocs.

+ Changed the way lua scripts are referenced in formulas. Now they are input as any other string formula,
    like this: \"@lua("script_name.lua", 1)
    being 1 if the reference should be added to the depgraph or not, making it evaluated just once or
    every time the depgraph is evaluated.